--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -98,26 +98,22 @@ h2 {
   margin-top: 60px;
   justify-content: space-between;
 }
-.icons li {
+.icon-style {
+  text-decoration: none;
   padding: 25px;
   font-size: 1.8rem;
   color: white;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-.icons li:hover {
-  cursor: pointer;
-  -webkit-transform: rotate(-20deg);
-  -moz-transform: rotate(-20deg);
-  -o-transform: rotate(-20deg);
-  -ms-transform: rotate(-20deg);
-  transform: rotate(-20deg);
-  color: #c25bf1;
+
+.icon-style {
+  color: white;
 }
 
+.icon-style:hover {
+  cursor: pointer;
+  color: #c25bf1;
+}
 /* Media Query for Tablet */
 @media only screen and (max-width: 960px) {
   .footer-links {
