updated the service

--- a/src/components/pages/Pricing/Pricing.css
+++ b/src/components/pages/Pricing/Pricing.css
@@ -17,13 +17,12 @@
   height: 15px;
   width: 100%;
   background-color: #1b6fec;
-  position: absolute;
   float: right;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
 }
 .pricing__container-card:nth-child(2) {
-  transform: scale(1.05);
+  /* transform: scale(1.05); */
   background: #1c2237;
 }
 
@@ -31,6 +30,7 @@
   transform: scale(1.06);
   transition: all 0.3s ease-out;
   color: #1c2237;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .pricing__container-card:nth-child(2) {
@@ -52,7 +52,8 @@
 
 .pricing__heading {
   color: #1c2237;
-  margin-bottom: 24px;
+  margin: auto;
+  margin-bottom: 50px;
 }
 
 .pricing__container-cardInfo {
@@ -101,7 +102,6 @@
   margin-bottom: 25px;
 }
 
-/*
 @media screen and (max-width: 960px) {
   .pricing__container {
     display: flex;
@@ -132,5 +132,3 @@
     transform: none;
   }
 }
-
-*/
